# ghqcr

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  debug_output.txt  rproject.toml
.github/workflows/: R-CMD-CHECK.yaml
R/: archive_app.R  assign_app.R  assign_app_helpers.R  commit_slider.R  configuration.R  extendr-wrappers.R  notify_app.R  onLoad.R  record_app.R  tree_navigator.R  utils.R
inst/css/: status_sidebar.css  styles.css
inst/default_checklist/: custom.yaml
inst/js/: adjust_grid.js  status.js  tree.js
man/: commit_slider_server.Rd  commit_slider_ui.Rd  create_safe_milestone_df.Rd  fix_issue_ids.Rd  get_milestones.Rd  get_multiple_milestone_issues.Rd  ghqc_archive_app.Rd  ghqc_assign_app.Rd  ghqc_config_setup.Rd  ghqc_config_status.Rd  ghqc_notify_app.Rd  ghqc_record_app.Rd  post_qc_comment_extr.Rd  safe_tibble_creation.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  ghqcr-win.def
src/rust/: Cargo.toml  archive.rs  configuration.rs  create.rs  git_utils.rs  lib.rs  notify.rs  record.rs  utils.rs
src/rust/src/: configuration.rs  create.rs  git_utils.rs  lib.rs  notify.rs  record.rs  utils.rs
