[package]
name = 'ghqcr'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'ghqcr'

[dependencies]
extendr-api = '0.8.1'
ghqctoolkit = { path = "/Users/wescummings/projects/ghqctoolkit" }

[profile.release]
lto = true
codegen-units = 1
