[package]
name = 'ghqc'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'ghqc'
path = "lib.rs"

[dependencies]
extendr-api = { version = "0.8.1", features = ["result_condition", "serde"] }
# ghqctoolkit = { git = "https://github.com/a2-ai/ghqctoolkit", branch = "record_upgrade" }
ghqctoolkit = { path = "../../../ghqctoolkit" }
gix = { version = "0.73", default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
anyhow = "1.0"
octocrab = { version = "0.39", default-features = false }
env_logger = "0.10"
log = "0.4"
markdown = "1.0"
serde = "1.0"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
